stylesheet.css
/* ... */
input[type="checkbox"]:checked, input[type="radio"] {
    accent-color: var(--primary_complement_hover);
}

label {
    text-transform: capitalize;
}


.filter-button {
    width: calc(100% - 40px);
    width: 100%;
    height: 60px;
    margin-top: 30px;
    border-radius: 8px;
    border: none;
    background-color: var(--primary_color);

    color: #F8F8F8;;

    font-size: 24px;
    font-weight: bold;

}

.filter-button:hover {
    background-color: var(--primary_complement_hover);
    background-color: var(--primary_complement_hover);
    cursor: pointer;
}
/*Sidebar style end*/

/*Post, comment and subcomment style start*/
.post_container {
    display: flex;
    flex-direction: column;
    border-radius: 15px;
    box-shadow: 0px 0px 20px var(--shadow_color);
    background-color: var(--secondary_background_color);
}

.comment_container, .subcomment_container {
    display: flex;
    flex-direction: column;
    padding: 30px;
    border-radius: 15px;
    box-shadow: 0px 0px 20px var(--shadow_color);
    background-color: var(--secondary_background_color);
}

.post_content_container {
    padding: 30px;
}

.post_container > .post_content_container > .post_content {
    max-height: 200px;
    overflow: hidden;
}

.post_content > p {
    word-break: break-all;
}

.comment_container {
    margin-left: auto;
    width: calc(100% - 35px);
    margin-top: 40px;
}

.subcomment_container {
    margin-left: auto;
    width: calc(100% - 60px);
    margin-top: 20px;
    display: flex;
}

.post_title {
    font-size: xx-large;
    font-weight: bold;
    margin-bottom: 10px;
    width: 100%;
    color: var(--title_font_color);
}

.post_tag {
    display: inline-block;
    vertical-align: middle;
    margin-top: -4px;
    padding: 5px 20px;
    border-radius: 5px;
    margin-right: 20px;
    /* background-color: var(--tag_color); */

    font-size: large;
    font-weight: bold;
    color: var(--tag_font_color);
}

.user_info_container {
    display: flex;
    align-items: center;
    padding-bottom: 20px;
    width: 100%;
}

.user_info_container > img {
    height: 35px;
    width: 35px;
    border-radius: 100%;
    box-shadow: 0px 0px 20px var(--shadow_color);
    object-fit: cover;
}

.user_info_container > *{
    margin-right: 10px;
    font-size: large;
    color: var(--details_font_color);

}
.user_info_container > .username, .user_info_container > .date{
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}


.user_tag {
    padding: 3px 10px;
    border-radius: 5px;
    background-color: var(--details_font_color);

    font-size: small;
    font-weight: medium;
    color: var(--tag_font_color);
}

.interaction_container {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-top: 20px;
    width: 100%;
}

.interaction_container > * {
    font-size: large;
}

.interaction_container > .like_count {
    margin-right: 30px;
}

.interaction_container > .comment_count {
    margin-right: 20px;
}

.interaction_container > i, .interaction_container > a{
    padding: 5px;
    margin-right: 2px;
    border-radius: 100%;
    background-clip: border-box;
    text-decoration: none;
}

.thread_content_container .interaction_container > i:hover , .interaction_container > a:hover{
    background-color: var(--post_interaction_color);
    cursor: pointer;
}

.interaction_container > .liked {
    color: var(--primary_color);
}
/*Post, comment and subcomment style end*/

/*Tooltip style start*/
.tooltip {
    position: relative;
}

.tooltip > .tooltip_text {
    font-size: 18px;
    visibility: hidden;
    background-color: var(--tooltip_background_color);
    color: var(--tag_font_color);
    text-align: center;
    border-radius: 5px;
    padding: 5px 10px;
    position: absolute;
    z-index: 1;
    top: 110%;
    left: 50%;
    transform: translate(-50%, 0);
    opacity: 0;
    transition: opacity 1s;
}

.tooltip .tooltip_text::after {
    content: "";
    position: absolute;
    bottom: 100%;
    left: 50%;
    transform: translate(-50%, 0);
    border-width: 5px;
    border-style: solid;
    border-color: transparent transparent var(--tooltip_background_color) transparent;
  }

.tooltip:hover > .tooltip_text{
  visibility: visible;
  opacity: 0.9;
}
/*Tooltip style end*/

/*Main-page style start*/
.main_content_container {
    display: flex;
    flex-direction: column;
    width: 80%;
    margin-left: 30px;
    padding: 20px;
    border-radius: 15px;
    background-color: var(--secondary_background_color);
}

.main_content_title {
    font-size: 38px;
    font-weight: bold;
    margin-bottom: 30px;
    color: var(--text_font_color);
    display: flex;
}

.main_content_posts > .post_container {
    flex-direction: row;
    align-items: center;
    margin-bottom: 30px;
}

.main_content_posts .post_container:hover {
    transform: scale(1.02);
    cursor: pointer;
}

.main_content_posts {
    width: 100%;
    display: flex;
    gap: 20px;
}

.column {
    flex: 1;
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.main_content_posts > .post_container > .post_image_container {
    flex: 0 0 auto;
    background-color: var(--primary_background_color);
    border-radius: 15px;
    margin-left: 30px;

    height: 300px;
    width: 300px;
}

.post_image_container > img {
    object-fit: contain;
    height: 100%;
    width: 100%;
    border-radius: 20px;
    margin-top: -3px;
}

.main_content_title > .create_post {
    margin-left: auto;
    font-size: 38px;
    color: var(--primary_color);
    border: solid var(--primary_color);
    border-radius: 100%;
    border-width: 3px;
}

.main_content_title > .create_post:hover {
    cursor: pointer;
    transform: scale(1.1);
}
/*Main-page style end*/

/*Thread-page style start*/
.thread_content_container {
    display: flex;
    flex-direction: column;
    width: 80%;
    margin-left: 30px;
    padding: 30px;
    border-radius: 15px;
    background-color: var(--secondary_background_color);
}
/* ... */

